# python3-module-generator

./: README.md  Session.vim  create_module.sh  create_package.sh  run.sh  tags
modulename/: .gitignore  README.md  activate_venv.sh  run.sh  setup.cfg
modulename/src/modulename/: __init__.py  modulename.py
packagename/: .gitignore  README.md  run.sh  setup.cfg  setup.py
