[metadata]
name = MODULENAME
description = Build your module
long_description=README.md, LICENSE,
long_description_content_type="text/markdown",
author = AUTHOR
author_email = AUTHOR_MAIL
keywords = KEYWORD1, KEYWORD2
license = The Unlicense
url = URL
classifiers =
  License :: Public Domain
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
packages = MODULENAME,
package_dir =
  = src
setup_requires =
  docutils>=0.3
  wheel
  setuptools_scm

[options.entry_points]
console_scripts =
    run = MODULENAME.MODULENAME:main
