[metadata]
name = $PACKAGENAME
description = Your description goes here
long_description=README.md, LICENSE,
long_description_content_type="text/markdown",
author = you
author_email = your@email.domain
keywords = KEYWORD1, KEYWORD2
license = The Unlicense
url = URL
classifiers =
  License :: Public Domain
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
packages = $PACKAGENAME,
package_dir =
  = src
setup_requires =
  docutils>=0.3
  wheel
  setuptools_scm

[options.entry_points]
console_scripts =
    run = $PACKAGENAME.$PACKAGENAME:main
